# VoxelStash

./: .clang-format  .editorconfig  CMakeLists.txt  CMakePresets.json  CONTRIBUTING.md  README.md  main.cpp  vcpkg.json
src/: Main.cpp  main.cpp
